Написал начальную разметку страницы

--- a/index.html
+++ b/index.html
@@ -7,10 +7,179 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="js/libs.min.js"></script>
-    <script src="js/main.js"></script>
+<header class="header">
+    <div class="container">
+        <div class="header__inner">
+            <div class="header__top">
+                <div class="header__top-logo">
+                    <a class="logo">
+                        <img src="images/" alt="">
+                    </a>
+                </div>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#"></a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#"></a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#"></a>
+                        </li>
+                        <li class="menu__list-item menu__list-btn btn">
+                            <a class="menu__list-link" href="#"></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__bottom">
+                <div class="header__bottom-textarea">
+                    <p class="header__bottom-undertitle"></p>
+                    <h1 class="header__bottom-title"></h1>
+                    <a class="btn header__bottom-btn" href="#"></a>
+                    <p class="header__bottom-descr"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="benefits">
+    <div class="container">
+        <div class="benefits__inner">
+            <div class="benefits__top">
+                <h3 class="benefits__title"></h3>
+                <p class="benefits__text"></p>
+                <div class="benefits__items">
+                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
+                </div>
+            </div>
+            <div class="benefits__bottom">
+                <div class="benefits__bottom-inner">
+                    <ul class="benefits__bottom-list">
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                    </ul>
+                    <ul class="benefits__bottom-list">
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                    </ul>
+                    <ul class="benefits__bottom-list">
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span></span></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="benefits__btn">
+                <a class="btn benefits__btn-link" href="#"></a>
+                <p class="benefits__btn-descr"></p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="trial">
+    <div class="container">
+        <div class="trial__textarea">
+            <h3 class="trial__title"><span class="trial__title-span"></span>
+                <span class="trial__title-span"></span>
+            </h3>
+            <p class="trial__descr"></p>
+            <div class="trial__btn">
+                <a class="btn trial__btn-link" href="#"></a>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="types">
+    <div class="types__inner">
+        <div class="container">
+            <div class="types__title"></div>
+            <p class="types__text"></p>
+            <div class="types__tabs tabs-wrapper">
+                <a class="tab types__tab" href="#"></a>
+                <a class="tab types__tab tab--active" href="#type-movies"></a>
+                <a class="tab types__tab" href="#"></a>
+                <a class="tab types__tab" href="#"></a>
+                <a class="tab types__tab" href="#"></a>
+            </div>
+        </div>
+        <div class="types__content">
+            <div id="type-movies" class="tabs-content types__content-item">
+                <div class="types__content-slider">
+                    <div class="types__content-slider__item">
+                        <img class="types__content-slider__item-img" src="images/" alt="">
+                    </div>
+                    <div class="types__content-slider__item">
+                        <img class="types__content-slider__item-img" src="images/" alt="">
+                    </div>
+                    <div class="types__content-slider__item">
+                        <img class="types__content-slider__item-img" src="images/" alt="">
+                    </div>
+                    <div class="types__content-slider__item">
+                        <img class="types__content-slider__item-img" src="images/" alt="">
+                    </div>
+                    <div class="types__content-slider__item">
+                        <img class="types__content-slider__item-img" src="images/" alt="">
+                    </div>
+                    <div class="types__content-slider__item">
+                        <img class="types__content-slider__item-img" src="images/" alt="">
+                    </div>
+                    <div class="types__content-slider__item">
+                        <img class="types__content-slider__item-img" src="images/" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="available">
+    <div class="container">
+        <div class="available__inner">
+            <div class="available__img"><img src="images" alt=""></div>
+            <div class="available__textarea">
+                <h4 class="available__title"></h4>
+                <p class="available__text"></p>
+            </div>
+        </div>
+        <div class="available__trial">
+            <div class="available__trial-btn">
+                <a class="btn available__trial-btn__link" href=""></a>
+            </div>
+            <div class="available__trial-text"></div>
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <ul class="footer__list">
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+            </ul>
+            <div class="footer__logo">
+                <a class="logo" href="#">
+                    <img src="images/" alt="">
+                </a>
+            </div>
+            <p class="footer__copy"></p>
+        </div>
+    </div>
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/libs.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
