Добавил контент и несколько изменил разметку

--- a/index.html
+++ b/index.html
@@ -13,32 +13,34 @@
             <div class="header__top">
                 <div class="header__top-logo">
                     <a class="logo">
-                        <img src="images/" alt="">
+                        <img src="images/logo" alt="">
                     </a>
                 </div>
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#"></a>
+                            <a class="menu__list-link" href="#">Buy a Gift</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#"></a>
+                            <a class="menu__list-link" href="#">Radeem a Gift</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#"></a>
+                            <a class="menu__list-link" href="#"><img src="images/login.svg" alt=""></a>
                         </li>
                         <li class="menu__list-item menu__list-btn btn">
-                            <a class="menu__list-link" href="#"></a>
+                            <a class="menu__list-link" href="#">Free Trial</a>
                         </li>
                     </ul>
                 </nav>
             </div>
             <div class="header__bottom">
                 <div class="header__bottom-textarea">
-                    <p class="header__bottom-undertitle"></p>
-                    <h1 class="header__bottom-title"></h1>
-                    <a class="btn header__bottom-btn" href="#"></a>
-                    <p class="header__bottom-descr"></p>
+                    <p class="header__bottom-undertitle">Unlimited Disney
+                        Magic. </p>
+                    <h1 class="header__bottom-title">Cartoons &
+                        Movies</h1>
+                    <a class="btn header__bottom-btn" href="#">SUBSCRIBE NOW</a>
+                    <p class="header__bottom-descr">Now only £4.99 per month.</p>
                 </div>
             </div>
         </div>
@@ -48,38 +50,38 @@
     <div class="container">
         <div class="benefits__inner">
             <div class="benefits__top">
-                <h3 class="benefits__title"></h3>
-                <p class="benefits__text"></p>
+                <h3 class="benefits__title">One Subscription.</h3>
+                <p class="benefits__text">A whole world of an amazing features and benefits for your family.</p>
                 <div class="benefits__items">
-                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/benefits__item-1.svg" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/benefits__item-2.svg" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/benefits__item-3.svg" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/benefits__item-4.svg" alt=""></a>
+                    <a class="benefits__item" href="#"><img src="images/benefits__item-5.svg" alt=""></a>
                 </div>
             </div>
             <div class="benefits__bottom">
                 <div class="benefits__bottom-inner">
                     <ul class="benefits__bottom-list">
-                        <li class="benefits__bottom-list__item"><span></span></li>
-                        <li class="benefits__bottom-list__item"><span></span></li>
-                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span>The biggest collection</span> of cartoons & movies</li>
+                        <li class="benefits__bottom-list__item">The exclusive home of <span>Disney kids' TV box sets</span></li>
+                        <li class="benefits__bottom-list__item">Live TV from <span>Disney Channel, XD and Junior</span></li>
                     </ul>
                     <ul class="benefits__bottom-list">
-                        <li class="benefits__bottom-list__item"><span></span></li>
-                        <li class="benefits__bottom-list__item"><span></span></li>
-                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item">Unlimited <span>downloads</span></li>
+                        <li class="benefits__bottom-list__item">Access on <span>10 compatible devices</span></li>
+                        <li class="benefits__bottom-list__item">Watch on <span>TV, desktop, tablet and mobile</span></li>
                     </ul>
                     <ul class="benefits__bottom-list">
-                        <li class="benefits__bottom-list__item"><span></span></li>
-                        <li class="benefits__bottom-list__item"><span></span></li>
-                        <li class="benefits__bottom-list__item"><span></span></li>
+                        <li class="benefits__bottom-list__item"><span>10% discount</span> at Disney Store</li>
+                        <li class="benefits__bottom-list__item"><span>No contract</span> subscription</li>
+                        <li class="benefits__bottom-list__item">Appropriate for <span>1+ of age</span></li>
                     </ul>
                 </div>
             </div>
             <div class="benefits__btn">
-                <a class="btn benefits__btn-link" href="#"></a>
-                <p class="benefits__btn-descr"></p>
+                <a class="btn benefits__btn-link" href="#">Try it out for free</a>
+                <p class="benefits__btn-descr">Now only £4.99 per month.</p>
             </div>
         </div>
     </div>
@@ -87,12 +89,14 @@
 <section class="trial">
     <div class="container">
         <div class="trial__textarea">
-            <h3 class="trial__title"><span class="trial__title-span"></span>
-                <span class="trial__title-span"></span>
+            <h3 class="trial__title">.
+                <span class="trial__title-span">Be Brave</span>Don’t just take
+                <span class="trial__title-span">
+                our word</span> for it.
             </h3>
-            <p class="trial__descr"></p>
+            <p class="trial__descr">Unlimited Disney, what's not to love and enjoy!</p>
             <div class="trial__btn">
-                <a class="btn trial__btn-link" href="#"></a>
+                <a class="btn trial__btn-link" href="#">FREE 7 DAYS</a>
             </div>
         </div>
     </div>
@@ -100,59 +104,59 @@
 <section class="types">
     <div class="types__inner">
         <div class="container">
-            <div class="types__title"></div>
-            <p class="types__text"></p>
+            <div class="types__title">Discover more Disney.</div>
+            <p class="types__text">Blockbusters. Classics. Fairytales. Scary Tales.
+                The best of Disney in one app.</p>
             <div class="types__tabs tabs-wrapper">
-                <a class="tab types__tab" href="#"></a>
-                <a class="tab types__tab tab--active" href="#type-movies"></a>
-                <a class="tab types__tab" href="#"></a>
-                <a class="tab types__tab" href="#"></a>
-                <a class="tab types__tab" href="#"></a>
+                <a class="tab types__tab" href="#">TV Sets</a>
+                <a class="tab types__tab tab--active" href="#type-movies">Movies</a>
+                <a class="tab types__tab" href="#">Music</a>
+                <a class="tab types__tab" href="#">Books</a>
+                <a class="tab types__tab" href="#">Live TV</a>
             </div>
         </div>
         <div class="types__content">
             <div id="type-movies" class="tabs-content types__content-item">
                 <div class="types__content-slider">
                     <div class="types__content-slider__item">
-                        <img class="types__content-slider__item-img" src="images/" alt="">
+                        <img class="types__content-slider__item-img" src="images/types-slider-1.jpg" alt="">
                     </div>
                     <div class="types__content-slider__item">
-                        <img class="types__content-slider__item-img" src="images/" alt="">
+                        <img class="types__content-slider__item-img" src="images/types-slider-1.jpg" alt="">
                     </div>
                     <div class="types__content-slider__item">
-                        <img class="types__content-slider__item-img" src="images/" alt="">
+                        <img class="types__content-slider__item-img" src="images/types-slider-1.jpg" alt="">
                     </div>
                     <div class="types__content-slider__item">
-                        <img class="types__content-slider__item-img" src="images/" alt="">
+                        <img class="types__content-slider__item-img" src="images/types-slider-1.jpg" alt="">
                     </div>
                     <div class="types__content-slider__item">
-                        <img class="types__content-slider__item-img" src="images/" alt="">
+                        <img class="types__content-slider__item-img" src="images/types-slider-1.jpg" alt="">
                     </div>
                     <div class="types__content-slider__item">
-                        <img class="types__content-slider__item-img" src="images/" alt="">
+                        <img class="types__content-slider__item-img" src="images/types-slider-1.jpg" alt="">
                     </div>
                     <div class="types__content-slider__item">
-                        <img class="types__content-slider__item-img" src="images/" alt="">
+                        <img class="types__content-slider__item-img" src="images/types-slider-1.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<section class="available">
-    <div class="container">
-        <div class="available__inner">
-            <div class="available__img"><img src="images" alt=""></div>
-            <div class="available__textarea">
-                <h4 class="available__title"></h4>
-                <p class="available__text"></p>
+        <div class="types__available">
+            <div class="available__inner">
+                <div class="available__img"><img src="images/available-icon.svg" alt=""></div>
+                <div class="available__textarea">
+                    <h4 class="available__title">Watch on the GO.</h4>
+                    <p class="available__text">Available on all Apple, Android and Amazon devices.
+                        Enjoy on TV, desktop, tablet and mobile.</p>
+                </div>
             </div>
-        </div>
-        <div class="available__trial">
-            <div class="available__trial-btn">
-                <a class="btn available__trial-btn__link" href=""></a>
+            <div class="available__trial">
+                <div class="available__trial-btn">
+                    <a class="btn available__trial-btn__link" href="#">Subscribe for Free Trial</a>
+                </div>
+                <div class="available__trial-text">Now only £4.99 per month.</div>
             </div>
-            <div class="available__trial-text"></div>
         </div>
     </div>
 </section>
@@ -160,21 +164,21 @@
     <div class="container">
         <div class="footer__inner">
             <ul class="footer__list">
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#"></a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Disney </a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Pixar </a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">About</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Ways to Watch</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Media Enquiries</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Terms of Use</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Privacy Policy</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Cookies Policy</a></li>
             </ul>
             <div class="footer__logo">
                 <a class="logo" href="#">
-                    <img src="images/" alt="">
+                    <img src="images/logo.svg" alt="">
                 </a>
             </div>
-            <p class="footer__copy"></p>
+            <p class="footer__copy">© 2017 Disney. All Rights & Copyrights Reserved.</p>
         </div>
     </div>
 </footer>
