--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="header__inner">
             <div class="header__top">
                 <div class="header__top-logo">
-                    <a class="logo">
-                        <img src="images/logo" alt="">
+                    <a class="logo" href="#">
+                        <img src="images/logo.svg" alt="">
                     </a>
                 </div>
                 <nav class="menu">
@@ -27,20 +27,29 @@
                         <li class="menu__list-item">
                             <a class="menu__list-link" href="#"><img src="images/login.svg" alt=""></a>
                         </li>
-                        <li class="menu__list-item menu__list-btn btn">
-                            <a class="menu__list-link" href="#">Free Trial</a>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link menu__list-btn btn" href="#">Free Trial</a>
                         </li>
                     </ul>
                 </nav>
             </div>
             <div class="header__bottom">
-                <div class="header__bottom-textarea">
-                    <p class="header__bottom-undertitle">Unlimited Disney
-                        Magic. </p>
-                    <h1 class="header__bottom-title">Cartoons &
-                        Movies</h1>
-                    <a class="btn header__bottom-btn" href="#">SUBSCRIBE NOW</a>
-                    <p class="header__bottom-descr">Now only £4.99 per month.</p>
+                <div class="header__bottom-inner">
+                    <div class="header__bottom-image">
+                        <a class="header__bottom-image__link" href="#">
+                            <img src="images/header__image.png" alt="">
+                        </a>
+                    </div>
+                    <div class="header__bottom-textarea">
+                        <p class="header__bottom-beforetitle">Unlimited Disney
+                            Magic. </p>
+                        <h1 class="header__bottom-title title">Cartoons &
+                            Movies</h1>
+                        <div class="header__bottom-btn">
+                            <a class="btn header__bottom-btn__link" href="#">SUBSCRIBE NOW</a>
+                        </div>
+                        <p class="header__bottom-descr">Now only £4.99 per month.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -50,7 +59,7 @@
     <div class="container">
         <div class="benefits__inner">
             <div class="benefits__top">
-                <h3 class="benefits__title">One Subscription.</h3>
+                <h3 class="benefits__title title">One Subscription.</h3>
                 <p class="benefits__text">A whole world of an amazing features and benefits for your family.</p>
                 <div class="benefits__items">
                     <a class="benefits__item" href="#"><img src="images/benefits__item-1.svg" alt=""></a>
@@ -63,14 +72,18 @@
             <div class="benefits__bottom">
                 <div class="benefits__bottom-inner">
                     <ul class="benefits__bottom-list">
-                        <li class="benefits__bottom-list__item"><span>The biggest collection</span> of cartoons & movies</li>
-                        <li class="benefits__bottom-list__item">The exclusive home of <span>Disney kids' TV box sets</span></li>
-                        <li class="benefits__bottom-list__item">Live TV from <span>Disney Channel, XD and Junior</span></li>
+                        <li class="benefits__bottom-list__item"><span>The biggest collection</span> of cartoons & movies
+                        </li>
+                        <li class="benefits__bottom-list__item">The exclusive home of
+                            <span>Disney kids' TV box sets</span></li>
+                        <li class="benefits__bottom-list__item">Live TV from <span>Disney Channel, XD and Junior</span>
+                        </li>
                     </ul>
                     <ul class="benefits__bottom-list">
                         <li class="benefits__bottom-list__item">Unlimited <span>downloads</span></li>
                         <li class="benefits__bottom-list__item">Access on <span>10 compatible devices</span></li>
-                        <li class="benefits__bottom-list__item">Watch on <span>TV, desktop, tablet and mobile</span></li>
+                        <li class="benefits__bottom-list__item">Watch on <span>TV, desktop, tablet and mobile</span>
+                        </li>
                     </ul>
                     <ul class="benefits__bottom-list">
                         <li class="benefits__bottom-list__item"><span>10% discount</span> at Disney Store</li>
@@ -91,7 +104,7 @@
         <div class="trial__textarea">
             <h3 class="trial__title">.
                 <span class="trial__title-span">Be Brave</span>Don’t just take
-                <span class="trial__title-span">
+                <span class="trial__title-span ">
                 our word</span> for it.
             </h3>
             <p class="trial__descr">Unlimited Disney, what's not to love and enjoy!</p>
@@ -104,7 +117,7 @@
 <section class="types">
     <div class="types__inner">
         <div class="container">
-            <div class="types__title">Discover more Disney.</div>
+            <div class="types__title title">Discover more Disney.</div>
             <p class="types__text">Blockbusters. Classics. Fairytales. Scary Tales.
                 The best of Disney in one app.</p>
             <div class="types__tabs tabs-wrapper">
@@ -146,7 +159,7 @@
             <div class="available__inner">
                 <div class="available__img"><img src="images/available-icon.svg" alt=""></div>
                 <div class="available__textarea">
-                    <h4 class="available__title">Watch on the GO.</h4>
+                    <h4 class="available__title title">Watch on the GO.</h4>
                     <p class="available__text">Available on all Apple, Android and Amazon devices.
                         Enjoy on TV, desktop, tablet and mobile.</p>
                 </div>
