--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="header__bottom-btn">
                             <a class="btn header__bottom-btn__link" href="#">SUBSCRIBE NOW</a>
                         </div>
-                        <p class="header__bottom-descr">Now only £4.99 per month.</p>
+                        <p class="header__bottom-descr descr">Now only £4.99 per month.</p>
                     </div>
                 </div>
             </div>
@@ -61,13 +61,18 @@
             <div class="benefits__top">
                 <h3 class="benefits__title title">One Subscription.</h3>
                 <p class="benefits__text">A whole world of an amazing features and benefits for your family.</p>
-                <div class="benefits__items">
-                    <a class="benefits__item" href="#"><img src="images/benefits__item-1.svg" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/benefits__item-2.svg" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/benefits__item-3.svg" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/benefits__item-4.svg" alt=""></a>
-                    <a class="benefits__item" href="#"><img src="images/benefits__item-5.svg" alt=""></a>
-                </div>
+                <ul class="benefits__list">
+                    <li class="benefits__list-item"><a class="benefits__list-link" href="#"><img
+                            src="images/benefits__item-1.svg" alt=""></a></li>
+                    <li class="benefits__list-item"><a class="benefits__list-link" href="#"><img
+                            src="images/benefits__item-2.svg" alt=""></a></li>
+                    <li class="benefits__list-item"><a class="benefits__list-link" href="#"><img
+                            src="images/benefits__item-3.svg" alt=""></a></li>
+                    <li class="benefits__list-item"><a class="benefits__list-link" href="#"><img
+                            src="images/benefits__item-4.svg" alt=""></a></li>
+                    <li class="benefits__list-item"><a class="benefits__list-link" href="#"><img
+                            src="images/benefits__item-5.svg" alt=""></a></li>
+                </ul>
             </div>
             <div class="benefits__bottom">
                 <div class="benefits__bottom-inner">
@@ -94,7 +99,7 @@
             </div>
             <div class="benefits__btn">
                 <a class="btn benefits__btn-link" href="#">Try it out for free</a>
-                <p class="benefits__btn-descr">Now only £4.99 per month.</p>
+                <p class="benefits__descr descr">Now only £4.99 per month.</p>
             </div>
         </div>
     </div>
@@ -107,7 +112,7 @@
                 <span class="trial__title-span ">
                 our word</span> for it.
             </h3>
-            <p class="trial__descr">Unlimited Disney, what's not to love and enjoy!</p>
+            <p class="trial__descr descr">Unlimited Disney, what's not to love and enjoy!</p>
             <div class="trial__btn">
                 <a class="btn trial__btn-link" href="#">FREE 7 DAYS</a>
             </div>
@@ -168,7 +173,7 @@
                 <div class="available__trial-btn">
                     <a class="btn available__trial-btn__link" href="#">Subscribe for Free Trial</a>
                 </div>
-                <div class="available__trial-text">Now only £4.99 per month.</div>
+                <div class="available__trial-descr descr">Now only £4.99 per month.</div>
             </div>
         </div>
     </div>
