Застилизовал секшен trial и завершил секшен benefits

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     </div>
 </header>
 <section class="benefits">
+    <div class="benefits__bg-image">
+        <img src="images/header-benefits.png" alt="">
+    </div>
     <div class="container">
         <div class="benefits__inner">
             <div class="benefits__top">
@@ -105,10 +108,13 @@
     </div>
 </section>
 <section class="trial">
+    <div class="trial__bg-image">
+        <img src="images/benefits-trial.png" alt="">
+    </div>
     <div class="container">
         <div class="trial__textarea">
-            <h3 class="trial__title">.
-                <span class="trial__title-span">Be Brave</span>Don’t just take
+            <h3 class="trial__title">
+                <span class="trial__title-span">Be Brave.</span> Don’t just take
                 <span class="trial__title-span ">
                 our word</span> for it.
             </h3>
