Застилизовал footer + внес некоторые корректировки

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
     </div>
 </header>
-<section class="benefits">
-    <div class="benefits__bg-image">
+<section class="benefits section__image-bg">
+    <div class="benefits__image-bg block__bg-image">
         <img src="images/header-benefits.png" alt="">
     </div>
     <div class="container">
@@ -110,8 +110,8 @@
         </div>
     </div>
 </section>
-<section class="trial">
-    <div class="trial__bg-image">
+<section class="trial section__image-bg">
+    <div class="trial__image-bg block__bg-image">
         <img src="images/benefits-trial.png" alt="">
     </div>
     <div class="container">
@@ -128,8 +128,8 @@
         </div>
     </div>
 </section>
-<section class="types">
-    <div class="types__images-bg">
+<section class="types section__image-bg">
+    <div class="types__image-bg block__bg-image">
         <img src="images/types-slider.png" alt="">
     </div>
     <div class="types__textarea">
@@ -649,14 +649,17 @@
         <div class="types__trial-descr descr">Now only £4.99 per month.</div>
     </div>
 </section>
-<footer class="footer">
+<footer class="footer section__image-bg">
+    <div class="footer__image-bg block__bg-image">
+        <img src="images/available-footer.png" alt="">
+    </div>
     <div class="container">
         <div class="footer__inner">
             <ul class="footer__list">
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Disney </a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Pixar </a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">About</a></li>
-                <li class="footer__list-item"><a class="footer__list-link" href="#">Ways to Watch</a></li>
+                <li class="footer__list-item footer__list-item--active"><a class="footer__list-link" href="#">Ways to Watch</a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Media Enquiries</a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Terms of Use</a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Privacy Policy</a></li>
