--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="menu__btn">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <ul class="menu__mobile">
+                    <li class="menu__list-item menu__mobile-list__item">
+                        <a class="menu__list-link" href="#">Buy a Gift</a>
+                    </li>
+                    <li class="menu__list-item menu__mobile-list__item">
+                        <a class="menu__list-link" href="#">Radeem a Gift</a>
+                    </li>
+                    <li class="menu__list-item menu__mobile-list__item menu__mobile-list__btn">
+                        <a class="menu__list-link" href="#">Free Trial</a>
+                    </li>
+                    <li class="menu__list-item menu__mobile-list__item">
+                        <a class="menu__list-link" href="#"><img src="images/login.svg" alt=""></a>
+                    </li>
+                </ul>
             </div>
             <div class="header__bottom">
                 <div class="header__bottom-inner">
@@ -148,7 +167,7 @@
                 </div>
             </div>
         </a>
-        <a class="tab types__tab tab--active" href="#type-movies">
+        <a class="tab types__tab tab&#45;&#45;active" href="#type-movies">
             <div class="types__tab-wrapper types__tab-in">
                 <div class="types__tab-inner">
                     <div class="types__tab-image__inner"><img class="types__tab-img" src="images/movies.svg"
@@ -279,7 +298,7 @@
                 </div>
             </div>
         </div>
-        <div id="type-movies" class="tabs-content types__content-item tabs-content--active">
+        <div id="type-movies" class="tabs-content types__content-item tabs-content&#45;&#45;active">
             <div class="types__content-slider">
                 <div class="types__content-slider__item">
                     <a class="types__content-slider__link" href="#"><img class="types__content-slider__play"
@@ -635,7 +654,7 @@
             <div class="types__available-inner">
                 <div class="types__available-img"><img src="images/available-icon.svg" alt=""></div>
                 <div class="types__available-textarea">
-                    <h4 class="types__available-title title">Watch on the GO.</h4>
+                    <h4 class="types__available-title">Watch on the GO.</h4>
                     <p class="types__available-text text">Available on all Apple, Android and Amazon devices.
                         Enjoy on TV, desktop, tablet and mobile.</p>
                 </div>
@@ -659,7 +678,7 @@
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Disney </a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Pixar </a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">About</a></li>
-                <li class="footer__list-item footer__list-item--active"><a class="footer__list-link" href="#">Ways to Watch</a></li>
+                <li class="footer__list-item footer__list-item&#45;&#45;active"><a class="footer__list-link" href="#">Ways to Watch</a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Media Enquiries</a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Terms of Use</a></li>
                 <li class="footer__list-item"><a class="footer__list-link" href="#">Privacy Policy</a></li>
